[gd_scene load_steps=3 format=3 uid="uid://qi8xavj8fstv"]

[ext_resource type="Theme" uid="uid://l11sr7bcm8y6" path="res://scenes/world/Game.theme" id="1_rrusl"]
[ext_resource type="Script" path="res://scenes/world/ui/pause_menu/pause_menu.gd" id="2_pb65l"]

[node name="PauseMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rrusl")
script = ExtResource("2_pb65l")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -15

[node name="TitlePanel" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"MenuTitleBar"

[node name="Label" type="Label" parent="Layout/TitlePanel"]
layout_mode = 2
text = "Pause Menu"

[node name="OptionsPanel" type="PanelContainer" parent="Layout"]
show_behind_parent = true
layout_mode = 2
theme_type_variation = &"MenuButtonPanel"

[node name="VLayout" type="VBoxContainer" parent="Layout/OptionsPanel"]
layout_mode = 2

[node name="BtnResume" type="Button" parent="Layout/OptionsPanel/VLayout"]
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Resume"

[node name="BtnOptions" type="Button" parent="Layout/OptionsPanel/VLayout"]
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Options"

[node name="BtnMain" type="Button" parent="Layout/OptionsPanel/VLayout"]
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Main Menu"

[node name="BtnQuit" type="Button" parent="Layout/OptionsPanel/VLayout"]
layout_mode = 2
theme_type_variation = &"MenuOptionButton"
text = "Quit"

[connection signal="pressed" from="Layout/OptionsPanel/VLayout/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Layout/OptionsPanel/VLayout/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Layout/OptionsPanel/VLayout/BtnMain" to="." method="_on_btn_main_pressed"]
[connection signal="pressed" from="Layout/OptionsPanel/VLayout/BtnQuit" to="." method="_on_btn_quit_pressed"]
